# fawkes-fork

./: .env_sample  .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
fawkes-fork/: dataset.py  face_op.py  facial_detection.py  feature_extraction.py  image_handling.py  image_models.py  loss.py  loss_function.py  optimizer.py  scores.py  target_selector.py  utils.py
fawkes-fork/models/: arcface.py  deepface.py  deepid.py  facenet.py  facenet512.py  openface.py
fawkes-original/: differentiator.py  protection.py
fawkes/fawkes-fork/: image_models.py  loss.py  optimizer.py
fawkes/fawkes-original/: differentiator.py  protection.py  utils.py
fawkes/fork/: face_op.py  image_models.py  optimizer.py  target.py  utils.py
fawkes/fork/models/: vggface.py
pysrc/: app.py  main.py
pysrc/fawkes/fork/: face_op.py  image_models.py  loss.py  optimizer.py  target.py
pysrc/fawkes/fork/models/: load_targets.py
pysrc/fawkes/original/: utils.py
scripts/: calculate_target_clusters.py  download_models.py  download_target_ds.py  make_target_pickle.py
src/: lib.rs
